@@ -5,6 +5,7 @@
     "unsafe-perm": true
   },
   "dependencies": {
+    "async": "^2.6.1",
     "body-parser": "latest",
     "eslint": "^5.6.0",
     "express": "",
