@@ -22,7 +22,6 @@
 		var manage_function = '';
 		var manage_function_uuid = '';
 		var token = '';
-		var syslog = '';
 
 		function clear(callback) {
 			var iframe = document.getElementById('iframe_a').contentWindow.document;
@@ -207,7 +206,6 @@
 				username: username,
 				password: password
 			}, function(auth) {
-				syslog = auth.syslog ? auth.syslog : syslog;
 				token = auth.token ? (
 					hideshow('login'),
 					hideshow('login'),
