@@ -9,20 +9,19 @@
 	<link rel="stylesheet" href="/assets/picluster-iframe.css">
 	<script>
 		function exec() {
-			var command = parent.syslog;
-			$.post("/exec", {
-				token: parent.token,
-				command: command
-			}, function(data) {
+			$.get("/syslog?token=" + parent.token, function(data) {
+				//	var output = data.replace(/(?:\r\n|\r|\n)/g, '<br />');
 				if ($('#query').val()) {
 					var search_string = $('#query').val();
 					var modified_data = data.split("\n");
 					var search_output = "";
+
 					for (i = 0; i != modified_data.length; i++) {
 						if (modified_data[i].toLowerCase().indexOf(search_string.toLowerCase()) > -1) {
 							search_output += "\n" + modified_data[i];
 						}
 					}
+
 					$("#command_output").val(search_output);
 				} else {
 					$("#command_output").val(data);
@@ -34,7 +33,7 @@
 			var day_check = moment().format("D");
 			var date = day_check.length > 1 ? moment().format("MMM D") : moment().format("MMM  D");
 
-			day.indexOf("today") > -1 ? $("#query").val(date) : $("#query").val(what);
+			day.indexOf("today") > -1 ? $("#query").val(date) : $("#query").val(day);
 			exec();
 			document.getElementById(id).checked = false;
 		};
