@@ -12,6 +12,7 @@
 * When adding a new node, a heartbeat config will be added.
 * Added Node Network Utilization Monitoring for Elasticsearch.
 * kibana-dashboards.json was merged into kibana-graphs.json for easier import.
+* Syslog - Redone do gather logs synchronously. 
 
 ## Bug Fixes:
 * None
